# p4

./: .gitignore  ONIONRELAY_MINIMAL_CALLS.md  ONIONRELAY_PIPELINE.md  PP2P_GUIDE.md  README.md  TOR_MINIMAL_CALLS.md  build_onionrelay_windows.ps1  build_tor_subset_windows.ps1  composer.json  direct_smoketest.py  onion_smoketest.py  p4.py  p4_core.py  pp2p.py  pp2p_core.py  requirements.txt  test.md
.github/workflows/: build-onionrelay-unix.yml  build-p4-core.yml  build-pp2p-core.yml  publish-maven-central.yml  publish-npm.yml  publish-python.yml  update-packagist.yml
bindings/: README.md
bindings/cpp/: CMakeLists.txt  README.md  example.cpp
bindings/cpp/include/: p4_core_cpp.hpp  pp2p_core_cpp.hpp
bindings/cpp/src/: p4_core_cpp.cpp  pp2p_core_cpp.cpp
bindings/java/: README.md  pom.xml
bindings/java/src/main/java/io/github/masterjx9/p4/: P4Core.java
bindings/java/src/main/java/io/github/masterjx9/pp2p/: Pp2pCore.java
bindings/java/src/main/java/io/pp2p/sdk/: Pp2pCore.java
bindings/javascript/: README.md  p4_core.d.ts  p4_core.js  package.json  pp2p_core.d.ts  pp2p_core.js
bindings/javascript/scripts/: postinstall.js
bindings/php/: README.md  composer.json  example.php
bindings/php/src/: P4Core.php  Pp2pCore.php
bindings/python/: README.md  pp2p_core.py  pyproject.toml
bindings/python/p4_core/: __init__.py
bindings/python_legacy/: README.md  pyproject.toml
include/: p4_core.h  pp2p_core.h
native/p4_core/darwin-arm64/: libp4_core.dylib
native/p4_core/darwin-x64/: libp4_core.dylib
rust/: Cargo.toml
rust/p4-core/: Cargo.toml
rust/p4-core/src/: lib.rs
rust/p4-ffi/: Cargo.toml
rust/p4-ffi/src/: lib.rs
rust/pp2p-core/: Cargo.toml
rust/pp2p-ffi/: Cargo.toml
rust/pp2p-ffi/src/: lib.rs
scripts/: build_onionrelay_unix.sh  build_p4_core.ps1  build_p4_core_unix.sh  build_pp2p_core.ps1  build_pp2p_core_unix.sh
