[package]
name = "pp2p-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Core protocol primitives for PP2P (identity, signing, envelope verification, replay window)"

[dependencies]
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.1"
sha2 = "0.10"
thiserror = "1"

